getStockSymbolList의 라이브러리 HttpClient로 변경